--- a/cssa-mini/static/iconfont.css
+++ b/cssa-mini/static/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3406119 */
-  src: url('iconfont.woff2?t=1663185608724') format('woff2'),
-       url('iconfont.woff?t=1663185608724') format('woff'),
-       url('iconfont.ttf?t=1663185608724') format('truetype');
+  src: url('iconfont.woff2?t=1663383390248') format('woff2'),
+       url('iconfont.woff?t=1663383390248') format('woff'),
+       url('iconfont.ttf?t=1663383390248') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow-down-copy:before {
+  content: "\ed58";
+}
+
+.icon-arrow-up:before {
+  content: "\ed59";
+}
+
+.icon-zhuye:before {
+  content: "\e61d";
+}
+
+.icon-zhuye-copy:before {
+  content: "\ed57";
+}
+
+.icon-biaoqing_nanguo:before {
+  content: "\e616";
 }
 
 .icon-menu-copy:before {
