--- a/cssa-mini/pages/courseMain/courseMain.css
+++ b/cssa-mini/pages/courseMain/courseMain.css
@@ -1,6 +1,6 @@
 .full-screen {
 	height: 100vh;
-	width: 140vw;
+	width: 185vw;
 }
 
 
@@ -9,8 +9,8 @@
 	display: flex;
 	flex-direction: row;
 	height: 100vh;
-	width: 180vw;
-	left: -80vw;
+	width: 185vw;
+	left: -85vw;
 	flex: 0;
 }
 
@@ -20,8 +20,8 @@
 
 .menu {
 	position: fixed;
-	left: -80vw;
-	width: 80vw;
+	left: -85vw;
+	width: 85vw;
 
 	height: 100vh;
 	background-color: white;
@@ -92,7 +92,7 @@
 	background-color: #F5F5F5;
 	border-radius: 20px 20px 0 0;
 	width: 100%;
-	height: calc(100vh - 106px);
+	height: calc(100vh - 126px);
 	flex: 0;
 }
 
@@ -132,6 +132,7 @@
 	height: 40px;
 	margin-bottom: 5px;
 	width: calc(100% - 20px);
+	font-size: 18px;
 	font-weight: 700;
 	background-color: #F5F5F5;
 	margin: 10px 10px 10px 10px;
@@ -159,4 +160,34 @@
 	right: 5%;
 	font-size: 12px;
 	color: #1684FC;
+}
+
+.suggest-box{
+	width: 100vw;
+	height: 30px;
+	border-top:1px #F5F5F5 solid;
+	box-sizing: border-box;
+	align-items: center;
+	flex-shrink: 0;
+}
+
+.suggest-box-course-num{
+	display: flex;
+	font-size: 14px;
+	margin-left: 10px;
+	line-height: 30px;
+	width:auto;
+	height: 30px;
+	flex-shrink: 0;
+}
+
+.suggest-box-course-name{
+	font-size:12px;
+	height: 30px;
+	color:#ccc;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	padding-left: 10px;
+	line-height: 30px;
 }
