new icon in the user page, new rules for the post comment form

--- a/cssa-mini/static/iconfont/iconfont.css
+++ b/cssa-mini/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3406119 */
-  src: url('iconfont.woff2?t=1663383390248') format('woff2'),
-       url('iconfont.woff?t=1663383390248') format('woff'),
-       url('iconfont.ttf?t=1663383390248') format('truetype');
+  src: url('iconfont.woff2?t=1663950477317') format('woff2'),
+       url('iconfont.woff?t=1663950477317') format('woff'),
+       url('iconfont.ttf?t=1663950477317') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,42 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-biaoqianA01_faxian-32:before {
+  content: "\ea6d";
+}
+
+.icon-biaoqianA01_shoucang-44:before {
+  content: "\ea79";
+}
+
+.icon-biaoqianA01_gongju-264:before {
+  content: "\ea83";
+}
+
+.icon-biaoqianA01_dingyue-92:before {
+  content: "\ead3";
+}
+
+.icon-biaoqiankuozhan_xiaoxi-252:before {
+  content: "\eb76";
+}
+
+.icon-biaoqiankuozhan_dongtai-254:before {
+  content: "\eb78";
+}
+
+.icon-biaoqiankuozhan_xiaoxi-272:before {
+  content: "\eb81";
+}
+
+.icon-biaoqiankuozhan_shequ-273:before {
+  content: "\eb82";
+}
+
+.icon-biaoqiankuozhan_dingdan-274:before {
+  content: "\eb83";
 }
 
 .icon-arrow-down-copy:before {
