coursePage updated comment-box updated

--- a/cssa-mini/static/iconfont/iconfont.css
+++ b/cssa-mini/static/iconfont/iconfont.css
@@ -1,115 +1,123 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 3406119 */
-  src: url('iconfont.woff2?t=1663950477317') format('woff2'),
-       url('iconfont.woff?t=1663950477317') format('woff'),
-       url('iconfont.ttf?t=1663950477317') format('truetype');
+	font-family: "iconfont";
+	/* Project id 3406119 */
+	src: url('iconfont.woff2?t=1663950477317') format('woff2'),
+		url('iconfont.woff?t=1663950477317') format('woff'),
+		url('iconfont.ttf?t=1663950477317') format('truetype');
+	src: url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.woff2?t=1664141559638') format('woff2'),
+		url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.woff?t=1664141559638') format('woff'),
+		url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.ttf?t=1664141559638') format('truetype');
 }
 
 .iconfont {
-  font-family: "iconfont" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: "iconfont" !important;
+	font-size: 16px;
+	font-style: normal;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .icon-biaoqianA01_faxian-32:before {
-  content: "\ea6d";
+	content: "\ea6d";
 }
 
 .icon-biaoqianA01_shoucang-44:before {
-  content: "\ea79";
+	content: "\ea79";
 }
 
 .icon-biaoqianA01_gongju-264:before {
-  content: "\ea83";
+	content: "\ea83";
 }
 
 .icon-biaoqianA01_dingyue-92:before {
-  content: "\ead3";
+	content: "\ead3";
 }
 
 .icon-biaoqiankuozhan_xiaoxi-252:before {
-  content: "\eb76";
+	content: "\eb76";
 }
 
 .icon-biaoqiankuozhan_dongtai-254:before {
-  content: "\eb78";
+	content: "\eb78";
 }
 
 .icon-biaoqiankuozhan_xiaoxi-272:before {
-  content: "\eb81";
+	content: "\eb81";
 }
 
 .icon-biaoqiankuozhan_shequ-273:before {
-  content: "\eb82";
+	content: "\eb82";
 }
 
 .icon-biaoqiankuozhan_dingdan-274:before {
-  content: "\eb83";
+	content: "\eb83";
 }
 
 .icon-arrow-down-copy:before {
-  content: "\ed58";
+	content: "\ed58";
 }
 
 .icon-arrow-up:before {
-  content: "\ed59";
+	content: "\ed59";
 }
 
 .icon-zhuye:before {
-  content: "\e61d";
+	content: "\e61d";
 }
 
 .icon-zhuye-copy:before {
-  content: "\ed57";
+	content: "\ed57";
 }
 
 .icon-biaoqing_nanguo:before {
-  content: "\e616";
+	content: "\e616";
 }
 
 .icon-menu-copy:before {
-  content: "\ed55";
+	content: "\ed55";
 }
 
 .icon-menu-down-copy:before {
-  content: "\ed56";
+	content: "\ed56";
 }
 
 .icon-jiantouyou:before {
-  content: "\e62d";
+	content: "\e62d";
 }
 
 .icon-renshu:before {
-  content: "\e6b6";
+	content: "\e6b6";
 }
 
 .icon-biaodiandidian:before {
-  content: "\e65e";
+	content: "\e65e";
 }
 
 .icon-shijian:before {
-  content: "\e8c5";
+	content: "\e8c5";
 }
 
 .icon-usd:before {
-  content: "\e70b";
+	content: "\e70b";
 }
 
 .icon-user:before {
-  content: "\e623";
+	content: "\e623";
 }
 
 .icon-date:before {
-  content: "\ed4f";
+	content: "\ed4f";
 }
 
 .icon-date-gray-copy:before {
-  content: "\ed54";
+	content: "\ed54";
 }
 
 .icon-user-blue:before {
-  content: "\ed53";
+	content: "\ed53";
+}
+
+.icon-like:before {
+  content: "\e729";
 }
 
