--- a/cssa-mini/static/iconfont/iconfont.css
+++ b/cssa-mini/static/iconfont/iconfont.css
@@ -4,9 +4,9 @@
 	src: url('iconfont.woff2?t=1663950477317') format('woff2'),
 		url('iconfont.woff?t=1663950477317') format('woff'),
 		url('iconfont.ttf?t=1663950477317') format('truetype');
-	src: url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.woff2?t=1664141559638') format('woff2'),
+/* 	src: url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.woff2?t=1664141559638') format('woff2'),
 		url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.woff?t=1664141559638') format('woff'),
-		url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.ttf?t=1664141559638') format('truetype');
+		url('//at.alicdn.com/t/c/font_3671410_q9pdbwrs21c.ttf?t=1664141559638') format('truetype'); */
 }
 
 .iconfont {
