--- a/cssa-mini/pages/courseMain/courseMain.css
+++ b/cssa-mini/pages/courseMain/courseMain.css
@@ -122,6 +122,15 @@
 	font-size: 15px;
 }
 
+.overlay{
+	position: fixed;
+	width: 100vw;
+	left:0;
+	height: calc(100vh - 56px);
+	top:56px;
+	background-color: rgba(0,0,0,0.8);
+	z-index: 20;
+}
 .filter-selected {
 	background-color: #c9d4fc;
 }
