--- a/cssa-mini/pages/courseMain/courseMain.css
+++ b/cssa-mini/pages/courseMain/courseMain.css
@@ -97,6 +97,7 @@
 }
 
 .filter-box {
+	position:relative;
 	height: 50px;
 	width: 100%;
 	align-items: center;
@@ -163,12 +164,11 @@
 }
 
 .filter-button {
-	position: fixed;
 	height: 50px;
 	line-height: 50px;
-	right: 5%;
 	font-size: 12px;
 	color: #1684FC;
+	margin-left: 10%;
 }
 
 .suggest-box{
