--- a/cssa-mini/static/iconfont/iconfont.css
+++ b/cssa-mini/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3406119 */
-  src: url('iconfont.woff2?t=1666924352833') format('woff2'),
-       url('iconfont.woff?t=1666924352833') format('woff'),
-       url('iconfont.ttf?t=1666924352833') format('truetype');
+  src: url('iconfont.woff2?t=1668457430689') format('woff2'),
+       url('iconfont.woff?t=1668457430689') format('woff'),
+       url('iconfont.ttf?t=1668457430689') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shoucangfill:before {
+  content: "\e6c9";
 }
 
 .icon-xiangyouhuadong:before {
