--- a/cssa-mini/static/iconfont/iconfont.css
+++ b/cssa-mini/static/iconfont/iconfont.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3406119 */
-  src: url('iconfont.woff2?t=1666241413068') format('woff2'),
-       url('iconfont.woff?t=1666241413068') format('woff'),
-       url('iconfont.ttf?t=1666241413068') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3406119_umi6xl9qrx.woff2?t=1677433480765') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3406119_umi6xl9qrx.woff?t=1677433480765') format('woff'),
+       url('//at.alicdn.com/t/c/font_3406119_umi6xl9qrx.ttf?t=1677433480765') format('truetype');
 }
-
 
 .iconfont {
   font-family: "iconfont" !important;
@@ -12,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shanchu:before {
+  content: "\e74b";
+}
+
+.icon-xiangshang3:before {
+  content: "\e76f";
+}
+
+.icon-bianji:before {
+  content: "\e646";
+}
+
+.icon-tubiao-xiajia:before {
+  content: "\e620";
 }
 
 .icon-shoucangfill:before {
@@ -141,5 +156,3 @@
 .icon-user-blue:before {
   content: "\ed53";
 }
-
-
