--- a/pages/courseMain/courseMain.css
+++ b/pages/courseMain/courseMain.css
@@ -93,20 +93,22 @@
 
 .filter-box {
 	height: 50px;
-	width: 100%;
+	width: 100vw;
 	align-items: center;
 	background-color: white;
 	border: #F5F5F5 0.5px solid;
+	overflow-x: scroll;
 }
 
 .filter {
-	min-width: 50px;
+	flex-shrink: 0;
+	width: max-content;
 	padding: 0 10px 0 10px;
 	font-size: 12px;
 	height: 30px;
 	border-radius: 20px;
 	text-align: center;
-	margin-left: 10px;
+	margin: 0 5px;
 	background-color: #F5F5F5;
 	justify-content: space-around;
 	align-items: center;
@@ -150,9 +152,10 @@
 	left: 0;
 	margin-left: 85vw;
 	width: 100vw;
-	height: calc(100 - 56px)vh;
+	height: calc(100vh - 56px);
 	background-color: #F5F5F5;
 	z-index:2;
+	padding-bottom: 5px;
 }
 
 .filter-button {
