--- a/pages/courseMain/courseMain.css
+++ b/pages/courseMain/courseMain.css
@@ -1,6 +1,8 @@
 .full-screen {
-	height: 100vh;
+	height: calc(100vh - 56px);
 	width: 185vw;
+	position: fixed;
+	margin-top: 56px;
 }
 
 
@@ -78,9 +80,9 @@
 	left: 0;
 	top:56px;
 	background-color: white;
-	height: calc(100% - 56px) !important;
+	height: calc(100vh - 56px) !important;
 	width: 100vw;
-	z-index:15;
+	z-index: 100;
 }
 
 .icon {
@@ -91,20 +93,22 @@
 
 .filter-box {
 	height: 50px;
-	width: 100%;
+	width: 100vw;
 	align-items: center;
 	background-color: white;
 	border: #F5F5F5 0.5px solid;
+	overflow-x: scroll;
 }
 
 .filter {
-	min-width: 50px;
+	flex-shrink: 0;
+	width: max-content;
 	padding: 0 10px 0 10px;
 	font-size: 12px;
 	height: 30px;
 	border-radius: 20px;
 	text-align: center;
-	margin-left: 10px;
+	margin: 0 5px;
 	background-color: #F5F5F5;
 	justify-content: space-around;
 	align-items: center;
@@ -119,8 +123,7 @@
 	position: fixed;
 	width: 100vw;
 	left:0;
-	height: calc(100vh - 56px);
-	top:56px;
+	height: 100vh;
 	background-color: rgba(0,0,0,0.8);
 	z-index: 20;
 }
@@ -149,10 +152,10 @@
 	left: 0;
 	margin-left: 85vw;
 	width: 100vw;
-	height: calc(100 - 56px)vh;
-	margin-top:56px;
+	height: calc(100vh - 56px);
 	background-color: #F5F5F5;
 	z-index:2;
+	padding-bottom: 5px;
 }
 
 .filter-button {
