refactor main and act page

--- a/uni.scss
+++ b/uni.scss
@@ -1,2 +1,16 @@
 @import '@/uni_modules/uni-scss/variables.scss';
 @import "@/uni_modules/vk-uview-ui/theme.scss";
+
+$main-primary-color: #7F0019;
+$main-secondary-color: #A9A9A9;
+$main-background-color: #F5F5F5;
+$main-background-color-2: #FFFFFF;
+$main-primary-font-color: #161616;
+$main-icon: #7F0019;
+
+$shade-deep-red: #7F0019;
+$shade-badger-red: #C5050C;
+$shade-pink: #D4BDC0;
+$shade-black: #161616;
+$shade-darker-gray: #7C7C7C;
+$shade-soft-gray: #A9A9A9;
